# estl

./: CMakeLists.txt  README.md
include/ape/estl/: buffer.hpp  byte.hpp  concepts.hpp  error_code.hpp  exception.hpp  io.hpp  memory.hpp  sso_vector.hpp  tiny_vector.hpp  type_utility.hpp  utility.hpp
include/ape/estl/backports/: span.hpp
include/ape/estl/io/: adaptor.hpp  iocore.hpp  memory.hpp
src/: dummy.cpp
test/: CMakeLists.txt  buffer.cpp  error_code.cpp  exception.cpp  io.cpp  main.cpp  sso_vector.cpp  tiny_vector.cpp  utility.cpp
test/backports/: span.cpp
